# WirelessAdapter

./: .gitignore  README.md
common/: espnow_protocol.h  hid.h  msg_types.h
custom_components/wireless_shared/: CMakeLists.txt
custom_components/wireless_shared/include/: constants.h
custom_components/wireless_shared/include/src/: wifi.c
custom_components/wireless_shared/include/wifi/: msg_types.h  wifi.c  wifi.h
espnow_getmac/: CMakeLists.txt
espnow_getmac/main/: CMakeLists.txt  main.c
wireless_receiver-1.0/: CMakeLists.txt
wireless_receiver-1.0/main/: CMakeLists.txt  idf_component.yml  main.c
wireless_receiver-1.0/main/tusb/: tusb_config.h  usb_common.h  usb_descriptors.c
wireless_receiver-2.0/: CMakeLists.txt  structure.puml
wireless_receiver-2.0/main/: CMakeLists.txt  device_config.h  idf_component.yml  main.c
wireless_receiver-2.0/main/devices/: devices.c  devices.h  keyboard.c  keyboard.h  mouse.c  mouse.h
wireless_receiver-2.0/main/hardware/: hardware.c  hardware.h
wireless_receiver-2.0/main/tusb/: tusb_cb.c  tusb_cb.h  tusb_config.h
wireless_receiver-2.0/main/wifi/: wifi.c  wifi.h
wireless_transmitter-1.0/: CMakeLists.txt  sdkconfig
wireless_transmitter-1.0/main/: CMakeLists.txt  controller_usage.c  controller_usage.h  idf_component.yml  main.c
wireless_transmitter-1.0/main/tusb/: tusb_config.h
wireless_transmitter-2.0/: CMakeLists.txt  structure.puml
wireless_transmitter-2.0/main/: CMakeLists.txt  device_config.h  idf_component.yml  main.c
wireless_transmitter-2.0/main/devices/: devices.h  gamepad.c  keyboard.c  mouse.c
wireless_transmitter-2.0/main/hardware/: hardware.c  hardware.h
wireless_transmitter-2.0/main/sleep/: sleep.c  sleep.h
wireless_transmitter-2.0/main/wifi/: wifi.c  wifi.h
